# bazel_avr_tcp_ip

./: .bazelrc  .clang-format  BUILD  MODULE.bazel  README.md  WORKSPACE  clang-format.sh  delay.c  delay.h  enc28j60.c  enc28j60.h  enc28j60_defines.h  ethernet.c  log.c  log.h  main.c  spi.c  spi.h  timer.c  timer.h  uart.c  uart.h
bazel/rules/: run_as_exec.bzl
bazel/toolchain/avr/: cc_toolchain_config.bzl
scripts/: avrdude.sh
uip/: BUILD  clock-arch.c  uip-conf.h
